--- a/example/README
+++ b/example/README
@@ -1,4 +1,7 @@
-The data in this directory is chromosome 3r of Drosophila Melanogaster.
-This command will run 5 two-site tests, and 5 dominance tests on this chromosome
+cmd line:
 
-./ahmm_mls -i 3R.SD.SUBDIVIDED.panel -s SD.3R.SUBDIVIDED.ploidy -m 0.17 430 -l 3rsite_file > results
+./ahmm_mls -i example.panel -s example.sample -m model_file > example.output
+
+The model file contains two lines, one two fit a single locus selection model, and one to fit a two 
+locus selection model. These models will be fit to a simulated dataset in which two nearby selected positions
+were introduced in a single admixture pulse.
